package com.ucms.users;

public class Student extends User {
    public Student(String firstname, String lastname, String email, String password, String address, String phone) {
        super(firstname, lastname, email, password, address, phone);
    }
}
