package com.michaelmckibbin.ucms.courses;

public class Course {
}
