package com.michaelmckibbin.ucms.users;

public class Lecturer extends User {
}
