package com.michaelmckibbin.ucms.users;

public class User {
}
