package com.ucms;

public enum AssessmentType {
    FINAL_EXAM,
    TEST,
    ASSIGNMENT
}